Disable resizing for Batch form.

--- a/CiscoIPCommRegCreator2/Batch.xaml
+++ b/CiscoIPCommRegCreator2/Batch.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CiscoIPCommRegCreator2"
         mc:Ignorable="d"
-        Title="Cisco Batch Reg Creator" Height="352.099" Width="357">
+        Title="Cisco Batch Reg Creator" Height="352.099" Width="357"
+        ResizeMode="NoResize">
     <Grid Margin="0,0,2,9">
         <Grid.ColumnDefinitions>
 
